welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:3: error: type mismatch;
 found   : Unit
 required: Boolean
	gauche();
              ^ZigZag:9: error: type mismatch;
 found   : Unit
 required: Boolean
	droite();
              ^